--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
 	<meta charset="utf-8">
@@ -12,7 +12,7 @@
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our 75<sup>th</sup> Year</h3>
+		<h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
 	</header>
 	<main>
 		<h2>Our Mission</h2>
